bug: break on space if it exists, else force the break

--- a/admin/controllers/content/views/all/style.css
+++ b/admin/controllers/content/views/all/style.css
@@ -159,7 +159,7 @@ table.dragging .before_after_wrap {
     }
 
     table.table th, table.table td {
-        word-break: break-all;
+        word-break: break-word;
     }
 }
 
